Bug 828200 - Any audio channel should play when visible. r=mchen